# CMakeCatch2

./: .gitignore  README.md  TODO.md
scripts/: add_project.py  helpers.py  setup_new_repository.py  submodules.py  update_scripts.py  update_templates.py
templates/desktop/cmake/: UpdateSubmodules.cmake
templates/desktop/docs/: README.md
templates/desktop/libs/: README.md
templates/desktop/src/: README.md
templates/desktop/tests/: README.md
templates/embedded/bootloader/: README.md
templates/embedded/drivers/: README.md  driver.c  driver.h
templates/embedded/dsp/: README.md
templates/embedded/hardware_design/: README.md
templates/embedded/root/: CMakeLists.txt  README.md
templates/embedded/scripts/: README.md
templates/embedded/tests/: README.md  driver_test.cpp
templates/plugin/cmake/: README.md
templates/plugin/python/: README.md
templates/plugin/src/: CMakeLists.txt  README.md
templates/plugin/tests/: README.md
